<resources>
  <string name="app_name">Roastd</string>
  <string name="title_activity_maps">Map</string>
  <string name="start_search_activity_button">Search drinks, beans, and shops...</string>
  <string name="start_search_profile_button">Profile</string>
  <string name="apply_manager">Apply to be a Manager</string>
  <string name="title_activity_login">Sign in</string>
  <string name="logout">Logout</string>
  <string name="login_desc">Share, rate, and discover coffee from around the world.</string>
  <string name="sign_in_with_google">Sign In With Google</string>
  <string name="shop_name">Shop Name</string>
  <string name="shop_addr">Shop Address</string>
  <string name="shop_num">Shop Phone Number</string>
  <string name="submit">Submit</string>
  <string name="search_title">Search</string>
  <string name="search_hint">Enter search terms</string>
  <string name="main_ready_desc">Ready for some coffee?</string>
  <string name="greeting_morning">Good Morning,</string>
  <string name="greeting_afternoon">Good Afternoon,</string>
  <string name="greeting_evening">Good Evening,</string>
  <string name="favorites_title">Favorites</string>
  <string name="favorites_desc">Your favorited items.</string>
  <string name="recommendations_title">Recommendations</string>
  <string name="recommendations_desc">Your custom "drinks" playlist.</string>
  <string name="profile_label">Profile</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_item_list">Items</string>
  <string name="title_item_detail">Item Detail</string>
</resources>
